--- a/src/mdtdatabase/mdtSqlDatabaseSchemaDialog.ui
+++ b/src/mdtdatabase/mdtSqlDatabaseSchemaDialog.ui
@@ -6,16 +6,52 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>545</width>
-    <height>398</height>
+    <width>532</width>
+    <height>422</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>Database schema creation</string>
   </property>
-  <layout class="QVBoxLayout" name="verticalLayout">
+  <layout class="QVBoxLayout" name="verticalLayout_3">
    <item>
-    <widget class="QTreeView" name="tvObjects"/>
+    <widget class="QGroupBox" name="dbDatabase">
+     <property name="title">
+      <string>Database</string>
+     </property>
+     <layout class="QVBoxLayout" name="verticalLayout">
+      <item>
+       <widget class="QToolButton" name="tbSelectDatabase">
+        <property name="statusTip">
+         <string>Select database</string>
+        </property>
+        <property name="text">
+         <string>...</string>
+        </property>
+        <property name="icon">
+         <iconset theme="document-open">
+          <normaloff/>
+         </iconset>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="mdtSqlDatabaseBasicInfoWidget" name="wDatabaseInfo" native="true"/>
+      </item>
+     </layout>
+    </widget>
+   </item>
+   <item>
+    <widget class="QGroupBox" name="gbObjects">
+     <property name="title">
+      <string>Schema</string>
+     </property>
+     <layout class="QVBoxLayout" name="verticalLayout_2">
+      <item>
+       <widget class="QTreeView" name="tvObjects"/>
+      </item>
+     </layout>
+    </widget>
    </item>
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout">
@@ -25,7 +61,9 @@
         <string>Create schema</string>
        </property>
        <property name="icon">
-        <iconset theme="system-run"/>
+        <iconset theme="system-run">
+         <normaloff/>
+        </iconset>
        </property>
       </widget>
      </item>
@@ -35,7 +73,9 @@
         <string>Abort</string>
        </property>
        <property name="icon">
-        <iconset theme="process-stop"/>
+        <iconset theme="process-stop">
+         <normaloff/>
+        </iconset>
        </property>
       </widget>
      </item>
@@ -60,6 +100,14 @@
    </item>
   </layout>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>mdtSqlDatabaseBasicInfoWidget</class>
+   <extends>QWidget</extends>
+   <header>mdtSqlDatabaseBasicInfoWidget.h</header>
+   <container>1</container>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections>
   <connection>
