--- a/src/mdtdatabase/mdtSqlDatabaseSchemaDialog.ui
+++ b/src/mdtdatabase/mdtSqlDatabaseSchemaDialog.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>532</width>
-    <height>422</height>
+    <width>759</width>
+    <height>518</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -19,26 +19,64 @@
      <property name="title">
       <string>Database</string>
      </property>
-     <layout class="QVBoxLayout" name="verticalLayout">
+     <layout class="QHBoxLayout" name="horizontalLayout_2">
       <item>
-       <widget class="QToolButton" name="tbSelectDatabase">
-        <property name="statusTip">
-         <string>Select database</string>
-        </property>
-        <property name="text">
-         <string>...</string>
-        </property>
-        <property name="icon">
-         <iconset theme="document-open">
-          <normaloff/>
-         </iconset>
-        </property>
-       </widget>
+       <layout class="QVBoxLayout" name="verticalLayout">
+        <item>
+         <widget class="QToolButton" name="tbSelectDatabase">
+          <property name="statusTip">
+           <string>Select database</string>
+          </property>
+          <property name="text">
+           <string>...</string>
+          </property>
+          <property name="icon">
+           <iconset theme="document-open">
+            <normaloff/>
+           </iconset>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <spacer name="verticalSpacer">
+          <property name="orientation">
+           <enum>Qt::Vertical</enum>
+          </property>
+          <property name="sizeType">
+           <enum>QSizePolicy::Minimum</enum>
+          </property>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>20</width>
+            <height>17</height>
+           </size>
+          </property>
+         </spacer>
+        </item>
+       </layout>
       </item>
       <item>
        <widget class="mdtSqlDatabaseBasicInfoWidget" name="wDatabaseInfo" native="true"/>
       </item>
+      <item>
+       <spacer name="horizontalSpacer">
+        <property name="orientation">
+         <enum>Qt::Horizontal</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>40</width>
+          <height>20</height>
+         </size>
+        </property>
+       </spacer>
+      </item>
      </layout>
+     <zorder>tbSelectDatabase</zorder>
+     <zorder>wDatabaseInfo</zorder>
+     <zorder>gbObjects</zorder>
+     <zorder>verticalSpacer</zorder>
+     <zorder>horizontalSpacer</zorder>
     </widget>
    </item>
    <item>
