--- a/src/mdtdatabase/mdtSqlDatabaseCopierTableMappingDialog.ui
+++ b/src/mdtdatabase/mdtSqlDatabaseCopierTableMappingDialog.ui
@@ -11,13 +11,19 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>Table mapping</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout_4">
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout_2">
      <item>
       <widget class="QGroupBox" name="gbSourceTable">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+         <horstretch>2</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
        <property name="title">
         <string>Source table</string>
        </property>
@@ -34,19 +40,34 @@
      </item>
      <item>
       <widget class="QGroupBox" name="gbDestinationTable">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+         <horstretch>1</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
        <property name="title">
         <string>Destination table</string>
        </property>
        <layout class="QVBoxLayout" name="verticalLayout_3">
         <item>
-         <widget class="QLabel" name="lbDestinationTable">
-          <property name="text">
-           <string>destination table</string>
-          </property>
-         </widget>
+         <widget class="QComboBox" name="cbDestinationTable"/>
         </item>
        </layout>
       </widget>
+     </item>
+     <item>
+      <spacer name="horizontalSpacer_2">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>40</width>
+         <height>20</height>
+        </size>
+       </property>
+      </spacer>
      </item>
     </layout>
    </item>
@@ -67,7 +88,9 @@
            <string>...</string>
           </property>
           <property name="icon">
-           <iconset theme="edit-clear"/>
+           <iconset theme="edit-clear">
+            <normaloff/>
+           </iconset>
           </property>
          </widget>
         </item>
