--- a/src/mdtcsv/mdtCsvFileGeneratorSettingsDialog.ui
+++ b/src/mdtcsv/mdtCsvFileGeneratorSettingsDialog.ui
@@ -19,26 +19,9 @@
      <property name="title">
       <string>File</string>
      </property>
-     <layout class="QFormLayout" name="formLayout">
-      <item row="0" column="0">
-       <widget class="QLabel" name="lbFilePath">
-        <property name="text">
-         <string>Path:</string>
-        </property>
-       </widget>
-      </item>
-      <item row="0" column="1">
-       <widget class="QLineEdit" name="leFilePath"/>
-      </item>
-      <item row="1" column="0">
-       <widget class="QLabel" name="lbFileEncoding">
-        <property name="text">
-         <string>Encoding:</string>
-        </property>
-       </widget>
-      </item>
-      <item row="1" column="1">
-       <widget class="QComboBox" name="cbFileEncoding"/>
+     <layout class="QVBoxLayout" name="verticalLayout_3">
+      <item>
+       <widget class="mdtCsvFileGeneratorFileSettingsWidget" name="wFileSettings" native="true"/>
       </item>
      </layout>
     </widget>
@@ -85,6 +68,12 @@
    <class>mdtCsvGeneratorSettingsWidget</class>
    <extends>QWidget</extends>
    <header>mdtCsvGeneratorSettingsWidget.h</header>
+   <container>1</container>
+  </customwidget>
+  <customwidget>
+   <class>mdtCsvFileGeneratorFileSettingsWidget</class>
+   <extends>QWidget</extends>
+   <header>mdtCsvFileGeneratorFileSettingsWidget.h</header>
    <container>1</container>
   </customwidget>
  </customwidgets>
