--- a/src/mdtdatabase/mdtSqlDatabaseCopierTableMappingDialog.ui
+++ b/src/mdtdatabase/mdtSqlDatabaseCopierTableMappingDialog.ui
@@ -91,6 +91,37 @@
      </property>
      <layout class="QVBoxLayout" name="verticalLayout">
       <item>
+       <layout class="QHBoxLayout" name="horizontalLayout_3">
+        <item>
+         <widget class="QCheckBox" name="cbUniqueInsertCriteria">
+          <property name="text">
+           <string>Unique insert criteria</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QToolButton" name="tbUniqueInsertCriteria">
+          <property name="text">
+           <string>...</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <spacer name="horizontalSpacer_4">
+          <property name="orientation">
+           <enum>Qt::Horizontal</enum>
+          </property>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>40</width>
+            <height>20</height>
+           </size>
+          </property>
+         </spacer>
+        </item>
+       </layout>
+      </item>
+      <item>
        <layout class="QHBoxLayout" name="horizontalLayout">
         <item>
          <widget class="QToolButton" name="tbResetMapping">
@@ -170,8 +201,8 @@
    <slot>accept()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>248</x>
-     <y>254</y>
+     <x>257</x>
+     <y>509</y>
     </hint>
     <hint type="destinationlabel">
      <x>157</x>
@@ -186,8 +217,8 @@
    <slot>reject()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>316</x>
-     <y>260</y>
+     <x>325</x>
+     <y>509</y>
     </hint>
     <hint type="destinationlabel">
      <x>286</x>
