--- a/src/mdtdatabase/mdt/sql/copier/UniqueInsertCriteriaDialog.ui
+++ b/src/mdtdatabase/mdt/sql/copier/UniqueInsertCriteriaDialog.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>UniqueInsertExpressionDialog</class>
- <widget class="QDialog" name="UniqueInsertExpressionDialog">
+ <class>UniqueInsertCriteriaDialog</class>
+ <widget class="QDialog" name="UniqueInsertCriteriaDialog">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Expression edition</string>
+   <string>Unique insert criteria</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout_2">
    <item>
@@ -43,16 +43,6 @@
         <string>destination</string>
        </property>
       </widget>
-     </item>
-     <item row="2" column="0">
-      <widget class="QLabel" name="lbDestinationKeyLabel">
-       <property name="text">
-        <string>Destination key:</string>
-       </property>
-      </widget>
-     </item>
-     <item row="2" column="1">
-      <widget class="QLineEdit" name="leDestinationKey"/>
      </item>
     </layout>
    </item>
@@ -132,16 +122,13 @@
     </widget>
    </item>
   </layout>
-  <zorder>gbMatchItems</zorder>
-  <zorder>buttonBox</zorder>
-  <zorder>twMatchItems</zorder>
  </widget>
  <resources/>
  <connections>
   <connection>
    <sender>buttonBox</sender>
    <signal>accepted()</signal>
-   <receiver>UniqueInsertExpressionDialog</receiver>
+   <receiver>UniqueInsertCriteriaDialog</receiver>
    <slot>accept()</slot>
    <hints>
     <hint type="sourcelabel">
@@ -157,7 +144,7 @@
   <connection>
    <sender>buttonBox</sender>
    <signal>rejected()</signal>
-   <receiver>UniqueInsertExpressionDialog</receiver>
+   <receiver>UniqueInsertCriteriaDialog</receiver>
    <slot>reject()</slot>
    <hints>
     <hint type="sourcelabel">
