--- a/src/mdtcsv/mdtCsvSettingsWidget.ui
+++ b/src/mdtcsv/mdtCsvSettingsWidget.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>mdtCsvGeneratorSettingsWidget</class>
- <widget class="QWidget" name="mdtCsvGeneratorSettingsWidget">
+ <class>mdtCsvSettingsWidget</class>
+ <widget class="QWidget" name="mdtCsvSettingsWidget">
   <property name="geometry">
    <rect>
     <x>0</x>
