--- a/src/mdtcsv/mdtCsvSettingsWidget.ui
+++ b/src/mdtcsv/mdtCsvSettingsWidget.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>387</width>
-    <height>147</height>
+    <width>395</width>
+    <height>175</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -67,6 +67,13 @@
      </property>
      <property name="text">
       <string>Allways protect text fields</string>
+     </property>
+    </widget>
+   </item>
+   <item>
+    <widget class="QCheckBox" name="cbParseExp">
+     <property name="text">
+      <string>Parse Excel protection marquer</string>
      </property>
     </widget>
    </item>
