--- a/src/mdtcsv/mdtCsvSettingsWidget.ui
+++ b/src/mdtcsv/mdtCsvSettingsWidget.ui
@@ -25,6 +25,12 @@
      </item>
      <item row="0" column="1">
       <widget class="QComboBox" name="cbFieldSeparator">
+       <property name="maximumSize">
+        <size>
+         <width>200</width>
+         <height>16777215</height>
+        </size>
+       </property>
        <property name="editable">
         <bool>true</bool>
        </property>
@@ -39,6 +45,12 @@
      </item>
      <item row="1" column="1">
       <widget class="QComboBox" name="cbFieldProtection">
+       <property name="maximumSize">
+        <size>
+         <width>200</width>
+         <height>16777215</height>
+        </size>
+       </property>
        <property name="editable">
         <bool>true</bool>
        </property>
@@ -53,6 +65,12 @@
      </item>
      <item row="2" column="1">
       <widget class="QComboBox" name="cbEol">
+       <property name="maximumSize">
+        <size>
+         <width>200</width>
+         <height>16777215</height>
+        </size>
+       </property>
        <property name="editable">
         <bool>false</bool>
        </property>
@@ -76,19 +94,6 @@
       <string>Parse Excel protection marquer</string>
      </property>
     </widget>
-   </item>
-   <item>
-    <spacer name="verticalSpacer">
-     <property name="orientation">
-      <enum>Qt::Vertical</enum>
-     </property>
-     <property name="sizeHint" stdset="0">
-      <size>
-       <width>20</width>
-       <height>40</height>
-      </size>
-     </property>
-    </spacer>
    </item>
   </layout>
  </widget>
