--- a/src/mdtcsv/mdtCsvFileSettingsWidget.ui
+++ b/src/mdtcsv/mdtCsvFileSettingsWidget.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>441</width>
-    <height>103</height>
+    <width>442</width>
+    <height>76</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -22,7 +22,20 @@
     </widget>
    </item>
    <item row="0" column="1">
-    <widget class="QLineEdit" name="leFilePath"/>
+    <widget class="QLineEdit" name="leFilePath">
+     <property name="maximumSize">
+      <size>
+       <width>16777215</width>
+       <height>16777215</height>
+      </size>
+     </property>
+     <property name="maxLength">
+      <number>500</number>
+     </property>
+     <property name="readOnly">
+      <bool>true</bool>
+     </property>
+    </widget>
    </item>
    <item row="1" column="0">
     <widget class="QLabel" name="lbFileEncoding">
@@ -32,7 +45,45 @@
     </widget>
    </item>
    <item row="1" column="1">
-    <widget class="QComboBox" name="cbFileEncoding"/>
+    <layout class="QHBoxLayout" name="horizontalLayout">
+     <item>
+      <widget class="QComboBox" name="cbFileEncoding">
+       <property name="maximumSize">
+        <size>
+         <width>200</width>
+         <height>16777215</height>
+        </size>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QToolButton" name="tbSelectUtf8Encoding">
+       <property name="text">
+        <string>UTF-8</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QToolButton" name="tbSelectSystemEncoding">
+       <property name="text">
+        <string>System</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <spacer name="horizontalSpacer">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>40</width>
+         <height>20</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+    </layout>
    </item>
   </layout>
  </widget>
