--- a/src/mdtcsv/mdtCsvFileParserSettingsDialog.ui
+++ b/src/mdtcsv/mdtCsvFileParserSettingsDialog.ui
@@ -6,20 +6,20 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>629</width>
-    <height>565</height>
+    <width>802</width>
+    <height>697</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>CSV file import options</string>
   </property>
-  <layout class="QVBoxLayout" name="verticalLayout_2">
+  <layout class="QVBoxLayout" name="mainLayout">
    <item>
     <widget class="QGroupBox" name="gbFileSettings">
      <property name="title">
       <string>File</string>
      </property>
-     <layout class="QHBoxLayout" name="horizontalLayout_2">
+     <layout class="QHBoxLayout" name="fileSettingsLayout">
       <item>
        <widget class="mdtCsvFileSettingsWidget" name="wFileSettings" native="true">
         <property name="sizePolicy">
@@ -31,7 +31,7 @@
         <property name="minimumSize">
          <size>
           <width>50</width>
-          <height>20</height>
+          <height>0</height>
          </size>
         </property>
        </widget>
@@ -63,7 +63,7 @@
         <property name="minimumSize">
          <size>
           <width>50</width>
-          <height>20</height>
+          <height>0</height>
          </size>
         </property>
        </widget>
@@ -80,6 +80,38 @@
          </size>
         </property>
        </spacer>
+      </item>
+     </layout>
+    </widget>
+   </item>
+   <item>
+    <widget class="QGroupBox" name="gbRecordFormat">
+     <property name="title">
+      <string>Formats</string>
+     </property>
+     <layout class="QHBoxLayout" name="horizontalLayout_3">
+      <item>
+       <widget class="QScrollArea" name="saRecordFormat">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="widgetResizable">
+         <bool>true</bool>
+        </property>
+        <widget class="QWidget" name="scrollAreaWidgetContents">
+         <property name="geometry">
+          <rect>
+           <x>0</x>
+           <y>0</y>
+           <width>756</width>
+           <height>79</height>
+          </rect>
+         </property>
+        </widget>
+       </widget>
       </item>
      </layout>
     </widget>
