--- a/libs/ItemEditor/examples/ClientEditor/src/ClientWidget.ui
+++ b/libs/ItemEditor/examples/ClientEditor/src/ClientWidget.ui
@@ -6,22 +6,22 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>331</width>
-    <height>80</height>
+    <width>399</width>
+    <height>104</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Form</string>
   </property>
   <layout class="QFormLayout" name="formLayout">
-   <item row="0" column="0">
+   <item row="1" column="0">
     <widget class="QLabel" name="lb_Id">
      <property name="text">
       <string>Id:</string>
      </property>
     </widget>
    </item>
-   <item row="0" column="1">
+   <item row="1" column="1">
     <widget class="QLineEdit" name="fld_Id">
      <property name="maximumSize">
       <size>
@@ -34,15 +34,29 @@
      </property>
     </widget>
    </item>
-   <item row="1" column="0">
+   <item row="2" column="0">
     <widget class="QLabel" name="lb_Name">
      <property name="text">
       <string>Name:</string>
      </property>
     </widget>
    </item>
-   <item row="1" column="1">
+   <item row="2" column="1">
     <widget class="QLineEdit" name="fld_Name"/>
+   </item>
+   <item row="0" column="1">
+    <widget class="QLabel" name="fld_State">
+     <property name="text">
+      <string/>
+     </property>
+    </widget>
+   </item>
+   <item row="0" column="0">
+    <widget class="QLabel" name="StateLabel">
+     <property name="text">
+      <string>State: </string>
+     </property>
+    </widget>
    </item>
   </layout>
  </widget>
